@@ -4,6 +4,7 @@
 - UI:
 	- Team Icon text now scales with icon scale.
 - AI:
+	Fix AI not going into Ramming mode when guns possess ammo, but not enough to meet resourceRequestAmount.
 	Orbital AI:
 		-Adds ability to use sidemounted engiens as RCS thrusters.
 		-Adds Zero-throttle firing range setting that will override maneuvering orientation in favor of pointing ship in attack Vector direction within set distance.
@@ -21,7 +22,12 @@
 	- Fix nuclear/explosive beehive submnitions not inheriting velocity when detonating on space.
 	- Fix APS going rapid-fire when running out of ammo.
 	- Fix HEAT bullets being reported as Missile damage in the Score parser.
-	-Fix issue with velocity calc that would result in penetrating rounds slowly drifing away from a hit ship in space.
+	- Fix issue with velocity calc that would result in penetrating rounds slowly drifing away from a hit ship in space.
+	- Weapons will now properly report Ammo Depleted when ammo remaining is less than amount required to fire.
+	- Fix weapons refusing to fire when one shot left when using multiple ammo boxes with differeing starting ammo amounts due to floating point errors.
+	- Explosive beehive submunition explosion FX now scaled based on submunition tntMass, not parent HE VFX.
+	- Missiles:
+		-Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
 1.7.0.0
 IMPROVEMENTS / FIXES
 - General:
